<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.cleo.labs</groupId>
    <artifactId>cleo-labs-util</artifactId>
    <version>5.6.2.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>cleo-labs-util</name>
    <url>http://maven.apache.org</url>

    <scm>
        <url>https://github.com/jthielens/cleo-labs-util</url>
        <connection>scm:git:https://github.com/jthielens/cleo-labs-util.git</connection>
        <developerConnection>scm:git:https://github.com/jthielens/cleo-labs-util.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <github.release>5.6.2</github.release>
        <github.tag>5.6.2</github.tag>
    </properties>

    <distributionManagement>
        <repository>
            <id>cleo_repo</id>
            <name>Internal Releases</name>
            <url>http://contd.cleo.com/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>cleo_repo</id>
            <name>Internal Releases</name>
            <url>http://contd.cleo.com/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <!-- Official Cleo's repository -->
            <id>cleo_repo</id>
            <name>Cleo's Repository</name>
            <!--  <url>http://10.80.80.157:8081/nexus/content/groups/public/</url> -->
            <url>http://contd.cleo.com/nexus/content/groups/public/</url>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
            <snapshots>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.5</version>
            </plugin>
            <plugin>
                <groupId>de.jutzig</groupId>
                <artifactId>github-release-plugin</artifactId>
                <version>1.1.1</version>
                <executions>
                    <execution>
                        <id>github-upload</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>release</goal>
                        </goals>
                        <inherited>false</inherited>
                        <configuration>
                            <releaseName>${github.release}</releaseName>
                            <tag>${github.tag}</tag>
                            <overwriteArtifact>true</overwriteArtifact>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
